dl_report template: run errorTable again so all states included

--- a/inst/templates/dl_report.qmd
+++ b/inst/templates/dl_report.qmd
@@ -1970,7 +1970,7 @@ final_data <- NULL
 #| echo: false
 
 DT::datatable(
-  et |> 
+  migbirdHIP::errorTable(proofed_data, loc = "all") |> 
     dplyr::rename(
       State = dl_state,
       Error = error,
