dl_report template: added export option to table of number of records from each state

--- a/inst/templates/dl_report.qmd
+++ b/inst/templates/dl_report.qmd
@@ -1179,7 +1179,13 @@ DT::datatable(
     dplyr::rename(
       State = dl_state,
       `Number of records` = n
-    ))
+    ),
+    extensions = "Buttons",
+    options = 
+      list(
+        dom = "Bfrtip",
+        buttons = c("csv", "excel", "pdf"))
+  )
 
 ```
 
